tests/baselines/reference/dtsEmitTripleSlashAvoidUnnecessaryResolutionMode.errors.txt
/app.mts(2,1): error TS18055: Declaration file contains hand-written type reference directives: "node"


==== /tsconfig.json (0 errors) ====
    {
      "compilerOptions": {
        "module": "nodenext",
        "types": [],
        "declaration": true,
        "emitDeclarationOnly": true,
      }
    }
    
==== /app.mts (1 errors) ====
    /// <reference types="node" />
    export async function drainStream(stream: NodeJS.ReadableStream): Promise<void> {
    ~~~~~~
!!! error TS18055: Declaration file contains hand-written type reference directives: "node"
    }
    
==== /node_modules/@types/node/package.json (0 errors) ====
    {
      "name": "@types/node",
      "version": "1.0.0",
      "types": "index.d.ts"
    }
    
==== /node_modules/@types/node/globals.d.ts (0 errors) ====
    declare namespace NodeJS {
      interface ReadableStream {}
    }
    
==== /node_modules/@types/node/index.d.ts (0 errors) ====
    /// <reference path="globals.d.ts" />
    